Fix color contrast for disabled link

--- a/src/components/Homepage/ClientsAndPartners/ClientsAndPartners.css
+++ b/src/components/Homepage/ClientsAndPartners/ClientsAndPartners.css
@@ -30,7 +30,7 @@
   border: none;
   padding: 0rem 1rem;
   font-size: 1.8rem;
-  color: hsl(237, 96%, 80%);
+  color: #5f64bd;
   outline: none;
   box-shadow: none;
 }
